# teachopencadd-zh

./: .buildinfo  .gitignore  README.md  acknowledgments.html  all_talktorials.html  api.html  citation.html  contact.html  contribute.html  external_dependencies.html  external_tutorials_collections.html  funding.html  genindex.html  index.html  installing.html  license.html  mlc_config.json  nohup.out  objects.inv  pyproject.toml  rename_folders.sh  search.html  searchindex.js  talktorials.html  translate_ipynb.py
docs/: conf.py
scripts/: translate_readmes.py
talktorials/: T001_query_chembl.html  T001_query_chembl.ipynb  T002_compound_adme.html  T002_compound_adme.ipynb  T003_compound_unwanted_substructures.html  T004_compound_similarity.html  T004_compound_similarity.ipynb  T005_compound_clustering.html  T005_compound_clustering.ipynb  T006_compound_maximum_common_substructures.html  T006_compound_maximum_common_substructures.ipynb  T007_compound_activity_machine_learning.html  T007_compound_activity_machine_learning.ipynb  T008_query_pdb.html  T008_query_pdb.ipynb  T009_compound_ensemble_pharmacophores.html  T009_compound_ensemble_pharmacophores.ipynb  T010_binding_site_comparison.html  T010_binding_site_comparison.ipynb  T011_query_online_api_webservices.html  T011_query_online_api_webservices.ipynb  T013_query_pubchem.html  T013_query_pubchem.ipynb  T014_binding_site_detection.html  T014_binding_site_detection.ipynb  T015_protein_ligand_docking.html  T015_protein_ligand_docking.ipynb  T016_protein_ligand_interactions.html  T019_md_simulation.html  T019_md_simulation.ipynb  T021_one_hot_encoding.html  T021_one_hot_encoding.ipynb  (+26 more)
(+202 files in other folders)
